--- a/santander-dev-week-angular/src/app/components/amount-box/amount-box.component.html
+++ b/santander-dev-week-angular/src/app/components/amount-box/amount-box.component.html
@@ -6,9 +6,9 @@
 	</div>
 
 	<div class="amout-card-middle">
-		<p id="amount-value">R$ 11111</p>
+		<p id="amount-value">R$ {{accountDetails.amountValue}}</p>
 		<div id="divider"></div>
-		<p id="amount-total">Saldo + Limite: 11111 </p>
+		<p id="amount-total">Saldo + Limite: {{accountDetails.totalAmount}}</p>
 	</div>
 
 </div>
